--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <nav id = "sidebar_text">
 
-            <div> <a href="Home.html"> Home </a> </div>
+            <div> <a href="index.html"> Home </a> </div>
             <div> <a href="About.html"> About </a> </div>
             <div> <a href="UPC-CFIS.html"> UPC-CFIS </a> </div>
             <div> <a href="Programming Projects.html"> Programming Projects </a> </div>
