--- a/About.html
+++ b/About.html
@@ -54,10 +54,27 @@
         <a href="Alexandre Estapé - Curriculum Vitae.pdf" class="button-like-link" id="CV" target="_blank"> CV </a>
         <button id="dark-mode-btn"></button>
         <div id="title"> About </div>
-        <p id="text"> Look at me ! </p>
+        <p id="text"> In this website you will have access to everything I did during my years at college. Here's a summary of every section: </p>
 
     </div>
+
+
+    <ul id = "list">
     
+        <li id = "bullet_point"> CFIS-UPC: Notes from lectures, problems and exams solved for every subject </li>
+        <li id = "bullet_point"> Programming Projects: Academic and personal projects </li>
+        <li id = "bullet_point"> Hackathons & Data Science contests: Projects and rankings from these contests </li>
+        <li id = "bullet_point"> Competitive Programming: My profiles at different competitive programming sites</li>
+        <li id = "bullet_point"> Math Contests: Learning sources I used for preparation </li>
+        <li id = "bullet_point"> Online certificates: My notes from online courses </li>
+        <li id = "bullet_point"> Language certificates: Learning sources I used for preparation </li>
+        <li id = "bullet_point"> Programming Languages: Notes for every language I used </li>
+        <li id = "bullet_point"> Time Managent: All my plannings and study sessions </li>
+        <li id = "bullet_point"> Hobbies: Stuff I do in my free time </li>
+        <li id = "bullet_point"> Blog: Random thoughts </li>
+    
+    </ul>
+
 
    <script src="script.js"></script>
 </body>
