green button in education

--- a/0-about.html
+++ b/0-about.html
@@ -19,7 +19,8 @@
     
     <div id="nav-placeholder"></div>
 
-    <p>The only purpose for this website is personal organization</p>
+    <p> I'm a junior studying Mathematics and Data Science Engineering at CFIS-UPC. I am now interested in Software Engineering 
+     and it will very likely be my future career!</p>
         
 
 
