--- a/1-education.html
+++ b/1-education.html
@@ -23,7 +23,7 @@
         
     <div class="grid-container">
         <div class="grid-item">Guitar</div>
-        <div class="grid-item right" onclick="navigateToYouTube()"></div>
+        <div class="grid-item right green_" onclick="navigateToYouTube()"></div>
         <div class="grid-item">3</div>
         <div class="grid-item right" onclick="navigateToYouTube()"></div>
         <div class="grid-item bottom">5</div>
